[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/starBackground.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/World.gd" type="Script" id=3]
[ext_resource path="res://meteors/Meteors.tscn" type="PackedScene" id=4]
[ext_resource path="res://meteors/meteorBig.png" type="Texture" id=5]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/EndScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/SpeedlLines.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/starSmall.png" type="Texture" id=9]
[ext_resource path="res://World/starBig.png" type="Texture" id=10]
[ext_resource path="res://game_music/01 Falling Organ.mp3" type="AudioStream" id=11]

[node name="World" type="ParallaxBackground"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 720.0 ]
}

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 0, 720 )

[node name="BackGround" type="Sprite" parent="ParallaxLayer"]
position = Vector2( 240, 387 )
scale = Vector2( 1.11477, 1.09227 )
texture = ExtResource( 1 )

[node name="StarBig" type="Sprite" parent="ParallaxLayer"]
position = Vector2( 358, 91 )
texture = ExtResource( 10 )

[node name="StarSmall" type="Sprite" parent="ParallaxLayer/StarBig"]
position = Vector2( -297, 521 )
texture = ExtResource( 9 )

[node name="StarSmall2" type="Sprite" parent="ParallaxLayer/StarBig"]
position = Vector2( -175, 106 )
texture = ExtResource( 9 )

[node name="StarSmall3" type="Sprite" parent="ParallaxLayer/StarBig"]
position = Vector2( -277, -34 )
texture = ExtResource( 9 )

[node name="StarBig" type="Sprite" parent="ParallaxLayer/StarBig"]
position = Vector2( -331, 285 )
texture = ExtResource( 10 )

[node name="StarBig2" type="Sprite" parent="ParallaxLayer/StarBig"]
position = Vector2( 52, 529 )
texture = ExtResource( 10 )

[node name="SpeedlLines" parent="ParallaxLayer" instance=ExtResource( 8 )]
position = Vector2( 402, 213 )

[node name="SpeedlLines2" parent="ParallaxLayer/SpeedlLines" instance=ExtResource( 8 )]
position = Vector2( -382, -228 )

[node name="SpeedlLines3" parent="ParallaxLayer/SpeedlLines" instance=ExtResource( 8 )]
position = Vector2( -346, 205 )

[node name="SpeedlLines4" parent="ParallaxLayer/SpeedlLines" instance=ExtResource( 8 )]
position = Vector2( -18, 368 )

[node name="EndScreen" parent="." instance=ExtResource( 7 )]
visible = false

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Message" parent="HUD" index="0"]
margin_left = -156.0
margin_top = -114.0
margin_right = 114.0
margin_bottom = 108.0
rect_scale = Vector2( 1.26819, 0.91877 )

[node name="ScoreString" parent="HUD" index="1"]
margin_left = -48.0
margin_top = -2.0
margin_right = 198.0
margin_bottom = 70.0

[node name="Score" parent="HUD/ScoreString" index="0"]
margin_left = 67.0
margin_right = 112.0

[node name="MessageTimer" parent="HUD" index="3"]
wait_time = 1.0

[node name="SmallMeteors" parent="." instance=ExtResource( 4 )]
position = Vector2( -31, 0 )

[node name="SmallMeteors2" parent="." instance=ExtResource( 4 )]
position = Vector2( -31, 0 )

[node name="SmallMeteors3" parent="." instance=ExtResource( 4 )]
position = Vector2( -31, 0 )

[node name="BigMeteor" parent="." instance=ExtResource( 4 )]
position = Vector2( -31, 0 )

[node name="Small" parent="BigMeteor" index="0"]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="SmallShape" parent="BigMeteor" index="1"]
scale = Vector2( 0.75, 0.75 )
polygon = PoolVector2Array( 16, -56, 56, -16, 56, -16, 64, 32, 64, 32, 16, 56, 16, 56, -16, 24, -16, 24, -48, 32, -48, 32, -72, 0, -72, 0, -48, -40, -48, -40 )

[node name="BigMeteor2" parent="." instance=ExtResource( 4 )]
position = Vector2( -31, 0 )

[node name="Small" parent="BigMeteor2" index="0"]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="SmallShape" parent="BigMeteor2" index="1"]
scale = Vector2( 0.75, 0.75 )
polygon = PoolVector2Array( 16, -56, 56, -16, 56, -16, 64, 32, 64, 32, 16, 56, 16, 56, -16, 24, -16, 24, -48, 32, -48, 32, -72, 0, -72, 0, -48, -40, -48, -40 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 240, 568 )

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTiimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0
autoplay = true

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit" from="SmallMeteors" to="." method="game_over"]
[connection signal="hit" from="SmallMeteors2" to="." method="game_over"]
[connection signal="hit" from="SmallMeteors3" to="." method="game_over"]
[connection signal="hit" from="BigMeteor" to="." method="game_over"]
[connection signal="hit" from="BigMeteor2" to="." method="game_over"]
[connection signal="timeout" from="Player/Pieces/PiecesTimer" to="." method="_on_PiecesTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTiimer" to="." method="_on_StartTiimer_timeout"]

[editable path="EndScreen"]
[editable path="HUD"]
[editable path="SmallMeteors"]
[editable path="SmallMeteors2"]
[editable path="SmallMeteors3"]
[editable path="BigMeteor"]
[editable path="BigMeteor2"]
[editable path="Player"]
[editable path="Player/Pieces"]
